# secured-app-linux

./: README.md  ra.patch
compiledPackages/: strongswan-5.3.0-1.torsec.el7.centos.x86_64.rpm
gui/: GUI.ui  IWList.py  MobilityClient.py  README.md  SECURED.desktop  authenticate.py  authenticate.ui  caCertNED2.crt  client_main.py  client_sec.py  firewall  gui.conf  ipsec  signalTest.py  ssids_list  start.sh  start_gui  stop.sh  ui_authenticateDialog.py
ipsec/: ipsec.conf_example  ipsec.secrets_example  oat-attest.conf
strongswan-5.3.2/: Makefile  config.h  config.status  configure  configure.ac  libtool
strongswan-5.3.2/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
strongswan-5.3.2/conf/: Makefile  strongswan.conf.5.head
strongswan-5.3.2/init/: Makefile
strongswan-5.3.2/init/systemd/: Makefile
strongswan-5.3.2/init/systemd-swanctl/: Makefile
strongswan-5.3.2/man/: Makefile
strongswan-5.3.2/scripts/: Makefile
strongswan-5.3.2/scripts/.deps/: aes-test.Po  bin2array.Po  bin2sql.Po  crypt_burn.Po  dh_speed.Po  dnssec.Po  fetch.Po  hash_burn.Po  id2sql.Po  key2keyid.Po  keyid2sql.Po  malloc_speed.Po  oid2der.Po  pubkey_speed.Po  settings-test.Po  thread_analysis.Po  timeattack.Po
strongswan-5.3.2/src/: Makefile
strongswan-5.3.2/src/_copyright/: Makefile
strongswan-5.3.2/src/_updown/: Makefile
strongswan-5.3.2/src/libcharon/plugins/oat_attest/: Makefile  Makefile.am  Makefile.in  oat_attest_listener.c
strongswan-5.3.2/src/libcharon/plugins/oat_attest/.deps/: oat_attest_listener.Plo  oat_attest_plugin.Plo
(+143 files in other folders)
